Добавляем секцию clients

--- a/index.html
+++ b/index.html
@@ -122,6 +122,35 @@ https://yadi.sk/i/z76v3NQyE_3Hig
             </div>
         </section>
 
+        <section class="clients">
+            <div class="clients__container">
+                <h3 class="clients__title">Клиенты и отзывы</h3>
+                <div class="clients__area">
+                    <div class="client">
+                        <div class="client__wrapper">
+                            <img class="client__image" src="./blocks/clients/__image/client-image.jpg" alt="Изображение клиента">
+                            <h4 class="client__name">Иннокентий Архангелогородцев <br class="client__name_br" /> (компания 1)</h4>
+                        </div>
+                        <p class="client__review">Ось собственного вращения восстанавливает предел функции, как и предполагалось.
+                            Уравнение Эйлера, в соответствии с основным законом динамики, естественно преобразует лазерный момент силы трения.
+                            Уравнение возмущенного движения расточительно поддерживает момент силы трения, что несомненно приведет нас к истине. 
+                        </p>
+                    </div>
+                    <div class="client">
+                        <div class="client__wrapper">
+                            <img class="client__image" src="./blocks/clients/__image/client-image.jpg" alt="Изображение клиента">
+                            <h4 class="client__name">Иннокентий Архангелогородцев <br class="client__name_br"/> (компания 1)</h4>
+                        </div>
+                        <p class="client__review">Ось собственного вращения восстанавливает предел функции, как и предполагалось.
+                            Уравнение Эйлера, в соответствии с основным законом динамики, естественно преобразует лазерный момент силы трения.
+                            Уравнение возмущенного движения расточительно поддерживает момент силы трения, что несомненно приведет нас к истине. 
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
         <section class="individual">
             <img src="./blocks/individual/__image/individual.jpg" alt="" class="individual__image" height="304"
                 width="569" />
