--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@ https://yadi.sk/i/z76v3NQyE_3Hig
           </p>
           <button class="button our__button">Хочу с вами работать</button>
         </div>
-      </section>
+       </section>
 
-         <section class="clients">
+        <section class="clients">
             <div class="clients__container">
                 <h3 class="clients__title">Клиенты и отзывы</h3>
                 <div class="clients__area">
@@ -205,21 +205,64 @@ https://yadi.sk/i/z76v3NQyE_3Hig
         </div>
       </section>
 
-      <section class="company">
-        <div class="company__container">
-          <h2 class="company__title">Компания JStick</h2>
-          <p class="company__description">
-            Мы команда JStick. Наша работа — решать вопросы с аналитикой продаж
-            на маркетплейсах для производственных кампаний.
-          </p>
-          <p class="company__description">
-            Мы занимаемся работой с данными совокупно уже более 12 лет. За это
-            время наша экспертиза выросла многократно. Для наших клиентов мы
-            решали IT и аналитические задачи, изучали алгоритмы продаж, работали
-            с большими данными строя аналитические модели. Всё то, что нужно для
-            уверенного роста бизнеса и продаж.
-          </p>
-        </div>
+        </section>
+
+        <section class="individual">
+            <img src="./blocks/individual/__image/individual.jpg" alt="" class="individual__image" height="304"
+                width="569" />
+            <div class="individual__container">
+                <h2 class="individual__title">Индивидуальный подход</h2>
+                <p class="individual__description">
+                    У каждой компании, с которой мы работаем, своя концепция и свой
+                    голос. Мы развиваем уникальные продукты. Мы предлагаем несколько
+                    сервисов для развития вашей компании. Если вы не найдете нужной
+                    услуги, мы всегда готовы встретиться и обсудить, чем можем помочь
+                    именно вам.
+                </p>
+            </div>
+        </section>
+
+        <section class="experience">
+                <div class="experience__container">
+                    <h2 class="experience__title">12 лет опыта работы с данными</h2>
+                    <p class="experience__description">
+                            Мы занимаемся работой с данными совокупно уже более 12 лет.
+                            За это время наша экспертиза выросла многократно. 
+                    </p>
+                </div>
+    
+                <img src="./blocks/experience/__image/experience__image.jpg" alt="" class="experience__image" height="352" width="326" />
+            </section>
+
+            <section class="business">
+                    <img src="./blocks/business/__image/business.jpg" alt="" class="business__image" height="315"
+                        width="415"/>
+                    <div class="business__container">
+                        <h2 class="business__title">Все, что необходимо бизнесу</h2>
+                        <p class="business__description">
+                                Для наших клиентов мы решали IT и аналитические задачи, 
+                                изучали алгоритмы продаж, работали с большими данными строя аналитические модели. 
+                                Всё то, что нужно для уверенного роста бизнеса и продаж. 
+                        </p>
+                    </div>
+                </section>
+
+
+        <section class="company">
+            <div class="company__container">
+                <h2 class="company__title">Компания JStick</h2>
+                <p class="company__description">
+                    Мы команда JStick. Наша работа — решать вопросы с аналитикой продаж
+                    на маркетплейсах для производственных кампаний.
+                </p>
+                <p class="company__description">
+                    Мы занимаемся работой с данными совокупно уже более 12 лет. За это
+                    время наша экспертиза выросла многократно. Для наших клиентов мы
+                    решали IT и аналитические задачи, изучали алгоритмы продаж, работали
+                    с большими данными строя аналитические модели. Всё то, что нужно для
+                    уверенного роста бизнеса и продаж.
+                </p>
+            </div>
 
         <img
           src="./blocks/company/__image/company.jpg"
@@ -291,7 +334,21 @@ https://yadi.sk/i/z76v3NQyE_3Hig
         </div>
 
         <button class="button">Оставить заявку</button>
-      </section>
+        </section>
+
+        <section class="leadform">
+            <div class="leadform__container">
+                <h3 class="leadform__title">Вы готовы работать с нами?</h3>
+                <h4 class="leadform__subtitle">Наши менеджеры свяжутся с вами</h4>
+                <form class="leadform__form" action="">
+                    <input class="input input__name" type="text" name="name" placeholder="Ваше имя">
+                    <input class="input input__email"  type="email" name="email" placeholder="Введите Email">
+                    <input class="input input__tel" type="tel" name="tel" placeholder="Введите телефон">                    
+                </form>
+                <button class="button">Оставить заявку</button>
+            </div>
+        </section>
+
     </main>
   </body>
 </html>
